--- a/css/styless.css
+++ b/css/styless.css
@@ -11,7 +11,7 @@
      }
 
  /*задаёт общий стиль основного шрифта*/
- body {
+ body { 
    height: 100%;
    width: 100%;
    /*width: auto;*/
@@ -165,10 +165,11 @@
   padding-bottom: 280px;
   text-align: center;
   background-color: var(--footer-background-color);
-  background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4) 50%, rgba(47, 48, 58, 0.4) 100%), url(../images/herobcg\ —\ копия.jpg);
+  background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4) 50%, rgba(47, 48, 58, 0.4) 100%), url(../images/herobcg-copy.jpg);
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
+  margin: 0 auto;
 }
 
 .hero-title {
